# aoc-2024

./: .gitignore  Makefile  README.md  aoc_2024.opam  dune-project  file.txt  utils.ml
day_1/: dune  solution_1.ml  solution_2.ml
day_10/: dune  solution_1.ml  solution_2.ml
day_11/: dune  solution_1.ml  solution_2.ml
day_12/: dune  solution_1.ml  solution_2.ml
day_13/: dune  solution_1.ml  solution_2.ml
day_14/: dune  solution_1.ml  solution_2.ml
day_15/: dune  solution_1.ml  solution_2.ml
day_16/: dune  solution_1.ml  solution_2.ml
day_16/input/: exampleM  exampleT
day_17/: dune  solution_1.ml  solution_2.ml
day_18/: dune  solution_1.ml  solution_2.ml
day_18/input/: example
day_19/: dune  solution_1.ml  solution_2.ml
day_19/input/: example
day_2/: dune  solution_1.ml  solution_2.ml
day_2/input/: example.txt
day_20/: dune  solution_1.ml  solution_2.ml
day_3/: dune  solution_1.ml  solution_2.ml
day_4/: dune  solution_1.ml  solution_2.ml
day_5/: dune  solution_1.ml  solution_2.ml
day_6/: dune  solution_1.ml  solution_2.ml
day_7/: dune  solution_1.ml  solution_2.ml
day_8/: dune  solution_1.ml  solution_2.ml
day_9/: dune  solution_1.ml  solution_2.ml
lib/: dune  lib.ml
