(lang dune 3.17)

(name aoc_2024)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "vteremasov <>")

(maintainers "vteremasov <>")

(license LICENSE)

(package
 (name aoc_2024)
 (synopsis "AoC 2024")
 (description "")
 (depends ocaml)
 (tags
  ("add topics" "to describe" your project)))

